--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             bottom: 5px;
             left: 10px;
             color: white;
-            font-size: 16px;
+            font-size: 12px;
             z-index: 11;
             background-color: rgba(0, 0, 0, 0.5);
             padding: 5px;
@@ -67,6 +67,7 @@
         #fuelDisplay {
             font-size: 18px;
             margin-bottom: 10px;
+            color: white;
         }
         button {
             background-color: #2c3e50;
